--- a/rawconverter.docbook
+++ b/rawconverter.docbook
@@ -3,13 +3,12 @@
 
 <title>Raw Converter</title>
 
-<!--
 <authorgroup>
 <author>
-<firstname> </firstname>
-<surname> </surname>
+<firstname>Gilles</firstname>
+<surname>Caulier</surname>
 <affiliation>
-<address><email> </email></address>
+<address><email>caulier dot gilles at free.fr</email></address>
 </affiliation>
 </author>
 </authorgroup>
@@ -17,10 +16,11 @@
 <releaseinfo>1.00.00</releaseinfo>
 <abstract>
 <para>
-Note about open header
+The Kipi RAW converter plugin is a tools for RAW images convertion operations.
 </para>
 </abstract>
--->
+
+
 <keywordset>
 <keyword>KDE</keyword>
 <keyword>Kipi</keyword>
@@ -30,10 +30,18 @@ Note about open header
 <title>Introduction</title>
 
 <para>
-The Kipi plugin <quote>Raw Converter</quote> currently has no
-documentation.  If you are interested in rectifying that situation,
-please contact Lauri Watts <email>lauri@kde.org</email>, &kde;'s
-Documentation Team coordinator.
+Launch the batch Raw Converter plugin dialog box. This plugin can convert quite a few RAW file images from differents digital cameras (Canon, Nikon, Sigma, Olympus, Minolta, etc.). It uses the Dave Coffin RAW photo decoder program "dcraw".
+</para>
+
+<para>
+This plugin provide two user interface for process on one RAW image (single mode) or a on a list of RAW images (batch mode).
+</para>
+
+<para>
+The "dcraw" program can be found at this
+<ulink url="http://www.cybercom.net/~dcoffin/dcraw/">
+<citetitle>url.</citetitle>
+</ulink>
 </para>
 
 </chapter>
