--- a/jpeglossless.docbook
+++ b/jpeglossless.docbook
@@ -3,13 +3,12 @@
 
 <title>JPEG Loss Less</title>
 
-<!--
 <authorgroup>
 <author>
-<firstname> </firstname>
-<surname> </surname>
+<firstname>Gilles</firstname>
+<surname>Caulier</surname>
 <affiliation>
-<address><email> </email></address>
+<address><email>caulier dot gilles at free.fr</email></address>
 </affiliation>
 </author>
 </authorgroup>
@@ -17,10 +16,10 @@
 <releaseinfo>1.00.00</releaseinfo>
 <abstract>
 <para>
-Note about open header
+The Kipi JPEG loss less plugin is a tool for to transform the images with no lose JPEG informations.
 </para>
 </abstract>
--->
+
 <keywordset>
 <keyword>KDE</keyword>
 <keyword>Kipi</keyword>
@@ -30,10 +29,15 @@ Note about open header
 <title>Introduction</title>
 
 <para>
-The Kipi plugin <quote>JPEG Loss Less</quote> currently has no
-documentation.  If you are interested in rectifying that situation,
-please contact Lauri Watts <email>lauri@kde.org</email>, &kde;'s
-Documentation Team coordinator.
+This plugin provide this actions in the host application without losing any quality and any exif informations:
+
+<itemizedlist>
+<listitem><para>Do Lossless JPEG 90/180/270 Degree Rotation.</para></listitem>
+<listitem><para>Do Lossless JPEG Horizontal or Vertical flip.</para></listitem>
+<listitem><para>Do Lossless JPEG black and white convertion.</para></listitem>
+<listitem><para>Exif rotation or flip auto-adjustment.</para></listitem>
+</itemizedlist>
+
 </para>
 
 </chapter>
