--- a/recompressimages.docbook
+++ b/recompressimages.docbook
@@ -1,7 +1,7 @@
-<chapter id="sendimages">
+<chapter id="recompressimages">
 <chapterinfo>
 
-<title>Send Images</title>
+<title>Recompress Images</title>
 
 <authorgroup>
 <author>
@@ -16,7 +16,7 @@
 <releaseinfo>1.00.00</releaseinfo>
 <abstract>
 <para>
-The Kipi send images images plugin is a tool for E-mail images.
+The Kipi recompress images plugin is a tool for recompressing the image files.
 </para>
 </abstract>
 
@@ -29,7 +29,15 @@ The Kipi send images images plugin is a tool for E-mail images.
 <title>Introduction</title>
 
 <para>
-E-mail the selected items with your favorite mail agent. A resizing items operation is possible. You can use the drag and drop for to add more images in the list to send.
+
+This plugin can be used for batch recompress images in an Album.
+It use "convert" program from "ImageMagick" package. The image files formats supported are:
+<itemizedlist>
+<listitem><para>JPEG.</para></listitem>
+<listitem><para>PNG.</para></listitem>
+<listitem><para>TIFF.</para></listitem>
+<listitem><para>TGA.</para></listitem>
+</itemizedlist>
 </para>
 
 </chapter>
