--- a/diroperations.docbook
+++ b/diroperations.docbook
@@ -3,13 +3,12 @@
 
 <title>Dir Operations</title>
 
-<!--
 <authorgroup>
 <author>
-<firstname> </firstname>
-<surname> </surname>
+<firstname>Gilles</firstname>
+<surname>Caulier</surname>
 <affiliation>
-<address><email> </email></address>
+<address><email>caulier dot gilles at free.fr</email></address>
 </affiliation>
 </author>
 </authorgroup>
@@ -17,10 +16,10 @@
 <releaseinfo>1.00.00</releaseinfo>
 <abstract>
 <para>
-Note about open header
+The Kipi dir operations plugin is a tool for to open the current collection in a files manager.
 </para>
 </abstract>
--->
+
 <keywordset>
 <keyword>KDE</keyword>
 <keyword>Kipi</keyword>
@@ -30,10 +29,7 @@ Note about open header
 <title>Introduction</title>
 
 <para>
-The Kipi plugin <quote>Dir Operations</quote> currently has no
-documentation.  If you are interested in rectifying that situation,
-please contact Lauri Watts <email>lauri@kde.org</email>, &kde;'s
-Documentation Team coordinator.
+With this plugin, you can opened the current Album in the Konqueror file manager for KDE desktop or the Nautilus file manager for the Gnome Desktop.
 </para>
 
 </chapter>
