--- a/printwizard.docbook
+++ b/printwizard.docbook
@@ -3,13 +3,12 @@
 
 <title>Print Wizard</title>
 
-<!--
 <authorgroup>
 <author>
-<firstname> </firstname>
-<surname> </surname>
+<firstname>Gilles</firstname>
+<surname>Caulier</surname>
 <affiliation>
-<address><email> </email></address>
+<address><email>caulier dot gilles at free.fr</email></address>
 </affiliation>
 </author>
 </authorgroup>
@@ -17,10 +16,10 @@
 <releaseinfo>1.00.00</releaseinfo>
 <abstract>
 <para>
-Note about open header
+The Kipi print wizard plugin is a tool for to print images azt the same time.
 </para>
 </abstract>
--->
+
 <keywordset>
 <keyword>KDE</keyword>
 <keyword>Kipi</keyword>
@@ -30,10 +29,11 @@ Note about open header
 <title>Introduction</title>
 
 <para>
-The Kipi plugin <quote>Print Wizard</quote> currently has no
-documentation.  If you are interested in rectifying that situation,
-please contact Lauri Watts <email>lauri@kde.org</email>, &kde;'s
-Documentation Team coordinator.
+The print wizard allows multiple images to be combined into single
+sheets of paper in standard photo sizes for printing.  The combined
+images can also be automatically opened with the image editor Gimp for
+enhancement or for direct printing using the Gimp-Print plugin.  The
+combined images can also be output directly to jpeg files.
 </para>
 
 </chapter>
