CVS_SILENT Fix KIPI descriptions
svn path=/trunk/kdeextragear-libs-1/doc/kipi-plugins/; revision=324504

--- a/index.docbook
+++ b/index.docbook
@@ -57,7 +57,7 @@
 
 <abstract>
 <para>
-This is the handbook for the plugins of Kipi, the &kde;'s Images Programs Interface.
+This is the handbook for the plugins of Kipi, the &kde;'s Images Plugins Interface.
 </para>
 </abstract>
 
