--- a/index.docbook
+++ b/index.docbook
@@ -17,6 +17,7 @@
  <!ENTITY doc-diroperations SYSTEM "diroperations.docbook">
  <!ENTITY doc-findimages SYSTEM "findimages.docbook">
  <!ENTITY doc-gammacalibration SYSTEM "gammacalibration.docbook">
+ <!ENTITY doc-kameraklient SYSTEM "kameraklient.docbook">
  <!ENTITY doc-imagesgallery SYSTEM "imagesgallery.docbook">
  <!ENTITY doc-jpeglossless SYSTEM "jpeglossless.docbook">
  <!ENTITY doc-mpegencoder SYSTEM "mpegencoder.docbook">
@@ -122,13 +123,16 @@ The plugins installed in this handbook are:
 <para><link linkend="commenteditor">Comment Editor plugin</link></para>
 </listitem>
 <listitem>
-<para><link linkend="diroperations">Dir Operations plugin</link></para>
+<para><link linkend="diroperations">Direrctories Operations plugin</link></para>
 </listitem>
 <listitem>
 <para><link linkend="findimages">Find Images plugin</link></para>
 </listitem>
 <listitem>
 <para><link linkend="gammacalibration">Gamma Calibration plugin</link></para>
+</listitem>
+<listitem>
+<para><link linkend="kameraklient">Digital camrera client plugin</link></para>
 </listitem>
 <listitem>
 <para><link linkend="imagesgallery">Images Gallery plugin</link></para>
@@ -175,6 +179,7 @@ The plugins installed in this handbook are:
 &doc-diroperations;
 &doc-findimages;
 &doc-gammacalibration;
+&doc-kameraklient;
 &doc-imagesgallery;
 &doc-jpeglossless;
 &doc-mpegencoder;
