--- a/commentseditor.docbook
+++ b/commentseditor.docbook
@@ -1,7 +1,7 @@
-<chapter id="commenteditor">
+<chapter id="commentseditor">
 <chapterinfo>
 
-<title>Comment Editor</title>
+<title>Comments Editor</title>
 
 <!--
 <authorgroup>
@@ -30,7 +30,7 @@ Note about open header
 <title>Introduction</title>
 
 <para>
-The Kipi plugin <quote>Comment Editor</quote> currently has no
+The Kipi plugin <quote>Comments Editor</quote> currently has no
 documentation.  If you are interested in rectifying that situation,
 please contact Lauri Watts <email>lauri@kde.org</email>, &kde;'s
 Documentation Team coordinator.
