--- a/index.docbook
+++ b/index.docbook
@@ -15,7 +15,7 @@
  <!ENTITY doc-cdarchiving SYSTEM "cdarchiving.docbook">
  <!ENTITY doc-commentseditor SYSTEM "commentseditor.docbook">
  <!ENTITY doc-diroperations SYSTEM "diroperations.docbook">
- <!ENTITY doc-findimages SYSTEM "findimages.docbook">
+ <!ENTITY doc-findduplicatedimages SYSTEM "findduplicatedimages.docbook">
  <!ENTITY doc-gammacalibration SYSTEM "gammacalibration.docbook">
  <!ENTITY doc-kameraklient SYSTEM "kameraklient.docbook">
  <!ENTITY doc-imagesgallery SYSTEM "imagesgallery.docbook">
@@ -126,7 +126,7 @@ The plugins installed in this handbook are:
 <para><link linkend="diroperations">Direrctories Operations plugin</link></para>
 </listitem>
 <listitem>
-<para><link linkend="findimages">Find Images plugin</link></para>
+<para><link linkend="findduplicatedimages">Find Duplicate Images plugin</link></para>
 </listitem>
 <listitem>
 <para><link linkend="gammacalibration">Gamma Calibration plugin</link></para>
@@ -177,7 +177,7 @@ The plugins installed in this handbook are:
 &doc-cdarchiving;
 &doc-commentseditor;
 &doc-diroperations;
-&doc-findimages;
+&doc-findduplicatedimages;
 &doc-gammacalibration;
 &doc-kameraklient;
 &doc-imagesgallery;
