--- a/index.docbook
+++ b/index.docbook
@@ -13,9 +13,8 @@
  <!ENTITY doc-resizeimages SYSTEM "resizeimages.docbook">
  <!ENTITY doc-calendar SYSTEM "calendar.docbook">
  <!ENTITY doc-cdarchiving SYSTEM "cdarchiving.docbook">
- <!ENTITY doc-commentseditor SYSTEM "commentseditor.docbook">
  <!ENTITY doc-diroperations SYSTEM "diroperations.docbook">
- <!ENTITY doc-findduplicatedimages SYSTEM "findduplicatedimages.docbook">
+ <!ENTITY doc-findduplicateimages SYSTEM "findduplicateimages.docbook">
  <!ENTITY doc-gammacalibration SYSTEM "gammacalibration.docbook">
  <!ENTITY doc-kameraklient SYSTEM "kameraklient.docbook">
  <!ENTITY doc-imagesgallery SYSTEM "imagesgallery.docbook">
@@ -120,13 +119,10 @@ The plugins installed in this handbook are:
 <para><link linkend="cdarchiving">CD Archiving plugin</link></para>
 </listitem>
 <listitem>
-<para><link linkend="commentseditor">Comments Editor plugin</link></para>
-</listitem>
-<listitem>
 <para><link linkend="diroperations">Direrctories Operations plugin</link></para>
 </listitem>
 <listitem>
-<para><link linkend="findduplicatedimages">Find Duplicate Images plugin</link></para>
+<para><link linkend="findduplicateimages">Find Duplicate Images plugin</link></para>
 </listitem>
 <listitem>
 <para><link linkend="gammacalibration">Gamma Calibration plugin</link></para>
@@ -175,9 +171,8 @@ The plugins installed in this handbook are:
 &doc-resizeimages;
 &doc-calendar;
 &doc-cdarchiving;
-&doc-commentseditor;
 &doc-diroperations;
-&doc-findduplicatedimages;
+&doc-findduplicateimages;
 &doc-gammacalibration;
 &doc-kameraklient;
 &doc-imagesgallery;
