CVS_SILENT Update
svn path=/trunk/kdeextragear-libs-1/doc/kipi-plugins/; revision=346879

--- a/gammacalibration.docbook
+++ b/gammacalibration.docbook
@@ -32,8 +32,7 @@ Note about open header
 <para>
 The Kipi plugin <quote>Gamma Calibration</quote> currently has no
 documentation.  If you are interested in rectifying that situation,
-please contact Lauri Watts <email>lauri@kde.org</email>, &kde;'s
-Documentation Team coordinator.
+please contact Kipi team mailing list <email>kde-imaging@kde.org</email>.
 </para>
 
 </chapter>
