--- a/printwizard.docbook
+++ b/printwizard.docbook
@@ -16,7 +16,7 @@
 <releaseinfo>1.00.00</releaseinfo>
 <abstract>
 <para>
-The Kipi print wizard plugin is a tool for to print images azt the same time.
+The Kipi print wizard plugin is a tool for to print images at the same time.
 </para>
 </abstract>
 
