--- a/colorimages.docbook
+++ b/colorimages.docbook
@@ -35,6 +35,8 @@ This plugin can be used for batch colors enhancement images in an Album.
  preview (partial or full) is available.
  10 colors filters types have been implemented:
 
+</para>
+
 <itemizedlist>
 <listitem><para><emphasis>Decrease contrast</emphasis> : reduce the image contrast.</para></listitem>
 <listitem><para><emphasis>Depth</emphasis> : change the color depth of the image.</para></listitem>
@@ -49,6 +51,7 @@ This plugin can be used for batch colors enhancement images in an Album.
 <listitem><para><emphasis>Trim</emphasis> : trim an image (fuzz reverse technic).</para></listitem>
 </itemizedlist>
 
+<para>
 You can see some samples building with this plugin at this
 <ulink url="http://digikamplugins.free.fr/ImagesGallerySamples/MultipleAlbums/ColorImages/index.html">
 <citetitle>url.</citetitle>
