CVS_SILENT Fixed typo
svn path=/trunk/kdeextragear-libs-1/doc/kipi-plugins/; revision=352581

--- a/resizeimages.docbook
+++ b/resizeimages.docbook
@@ -16,7 +16,7 @@
 <releaseinfo>1.00.00</releaseinfo>
 <abstract>
 <para>
-The Kipi resize images plugin is a tool for to add a border arround the images.
+The Kipi Resize Images plugin is a tool for resize or adapt the images dimensions.
 </para>
 </abstract>
 
