--- a/wallpaper.docbook
+++ b/wallpaper.docbook
@@ -16,7 +16,7 @@
 <releaseinfo>1.00.00</releaseinfo>
 <abstract>
 <para>
-The Kipi wall paper plugin is a tool for push an image in the desktop backgroung.
+The Kipi wall paper plugin is a tool for push an image in the desktop background.
 </para>
 </abstract>
 
